add_subdirectory (aed)          # AED models
add_subdirectory (au)           # University of Aarhus
add_subdirectory (bb)           # Bolding & Burchard
add_subdirectory (examples)     # Test examples
add_subdirectory (gotm)         # Converted from old GOTM/BIO models
add_subdirectory (hzg)          # Helmholtz-Zentrum Geesthacht
add_subdirectory (iow)          # Institute for Ostsee Forchung
add_subdirectory (klimacampus)  # KlimaCampus Hamburg
add_subdirectory (metu)         # Middle East Technical University
add_subdirectory (msi)          # Marine Systems Institute, Tallinn University of Technology 
add_subdirectory (niva)         # Norsk Institutt for Vannforskning
add_subdirectory (pml)          # Plymouth Marine Laboratory

#-----------------------------------------------------------------------
# Copyright (C) 2014 - Karsten Bolding and Jorn Bruggeman (BB)         !
#-----------------------------------------------------------------------
